projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Related Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QB Invoices</relationshipLabel>
    <relationshipName>QB_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>