projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Invoice__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Invoice description</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>