projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Invoice due date</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>