projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Invoice date</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>