projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Invoice__c/fields/QB_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice_ID__c</fullName>
    <description>QuickBooks Invoice ID</description>
    <externalId>true</externalId>
    <label>QB Invoice ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>